@@ -1,3 +1,12 @@
+2007-09-18  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Darin.
+
+        Test for <rdar://problem/5488478> Safari crashes when passing null to Range.insertNode()
+
+        * fast/dom/Range-insertNode-crash-expected.txt: Added.
+        * fast/dom/Range-insertNode-crash.html: Added.
+
 2007-09-18  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Darin.
